testdata/baselines/reference/compiler/moduleExportsInFunctionParam.errors.txt
/dep.js(1,20): error TS7006: Parameter 'module' implicitly has an 'any' type.


==== /dep.js (1 errors) ====
    function something(module) {
                       ~~~~~~
!!! error TS7006: Parameter 'module' implicitly has an 'any' type.
        module.exports = 8;
    }
    
    export default 7;
    
==== /main.ts (0 errors) ====
    import DefaultExport from "./dep.js";
    
    export default 3 + DefaultExport;
    